# reduction_ACES

./: .gitattributes  .gitignore  .readthedocs.yml  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  SB_naming.tsv  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: execution-block-template.md
.github/workflows/: ci_cron_weekly.yml  ci_tests.yml
aces/: __init__.py  conftest.py
aces/analysis/: LINE_DETECTION_SUMMARY.md  __init__.py  check_cubes.py  continuum_flux_pointsource_check.py  continuum_selection_diagnostic_plots.py  continuum_source_stacking.py  correlation_plots.py  crossmatch_catalog.py  crossmatch_masers.py  cube_stats_grid.py  cube_stats_grid_feathered.py  cutouts.py  diagnostic_spectra.py  downsample_all_spectrally.py  giantcube_cuts.py  giantcube_downsample.py  giantcube_moments_howto.md  imstats.py  latex_info.py  latex_table.py  line_detection_and_catalog_augmentation.py  meerkat_alpha.py  molecule_ratio_maps.py  parse_contdotdat.py  plot_2D_corr_more.py  plot_maser_crossmatch.py  prepare_maser_catalogs.py  pv_maker.py  run_statcont_cubes_slurmarray.sh  spectral_extraction_Feb2022.py  spectral_extraction_Nov2022.py  spectral_extraction_everywhere.py  statcont_cubes.py  tp_baseline_sub.py  uvhistograms.py
aces/analysis/data/: requested.txt
aces/cutout_scripts/: README.md  cutout_examples.ipynb  cutout_examples_narrowlines.ipynb  get_cutout.py  get_cutout_velocity_cube.py  requirements.txt  test_get_cutout.py  test_get_cutout_velocity_cube.py
aces/data_deliverables/: gzip_files.sh  update_headers.py
aces/hipergator_scripts/: delivery_status.py  fix_multibeam_Aug1_2023.py  fix_multibeam_statcontcubes.py  ghapi_update.py  hack_plotms.py  job_runner.py  link_files_to_releasedir.py  link_repipeline_weblogs.py  mous_map.py  run_allgiantcube_analysis.sh  run_allgiantcube_analysis_daskslurm.sh  run_assemble_contsel.sh  run_cs21_analysis.sh  run_cube_stats_grid.sh  run_diagnostic_spectra.sh  run_diagnostic_spectra_slurmarray.sh  run_downsample_spectrally.sh  run_hnco_analysis.sh  run_imagingpipeline_inplace.sh  run_imstats.sh  run_mosaic_12m.sh  run_mosaic_12m_all_lines.sh  run_mosaic_12m_contonly.sh  run_mosaic_7m.sh  run_mosaic_TP.sh  run_pipeline_slurm_burst_mpi.sh  run_reimaging_script.sh  run_retrieval.sh  run_script_generator.sh  run_simple_script.sh  run_sio21_analysis.sh  slurm_ch3cho_3m13_mosaic_jobs.sh  slurm_ch3cho_mosaic_jobs.sh  slurm_ch3oh_mosaic_jobs.sh  slurm_cs21_mosaic_jobs.sh  slurm_downsample_cubes.sh  slurm_fullband_downsampled.sh  slurm_h13cn_mosaic_jobs.sh  slurm_h13cop_mosaic_jobs.sh  slurm_h40a_mosaic_jobs.sh  (+13 more)
aces/imaging/: 12m-7mPlusTP-feather.py  README_zarr_combine.md  TP-ACA-feather.py  debug_mosaic_weights.py  dict-aca.txt  dict.txt  fullband_downsampled_cube.py  make_mosaic.py  mosaic_12m.py  mosaic_7m.py  mosaic_TP.py  mosaic_cube_zarr.py  parallel_tclean.py  reconcat_movecubes.py  reproject_to_celestial.py  run_fullband_downsampled.py  run_zarr_combine.py  write_tclean_scripts.py
aces/joint_deconvolution/: clean_HNCO_12m_7m.py  cropcubesCASA.py  cropcubesCASA_TP.py  cube_utils.py  do_joint_deconvolution.py  feather_12m_7m_TP_cube_mosaic.py  feather_12m_7m_TP_cube_mosaic_modsfeather.py  feather_12m_7m_TP_cube_mosaic_modsreprojectcasa.py  feather_12m_7m_TP_cube_mosaic_modssavefits.py  feather_12m_7m_TP_cube_mosaic_modssmoothcasa.py  feather_12m_7m_TP_cube_mosaic_weighted.py  feather_all.py  feather_all_spws.py  feather_continuum.py  feather_funcs.py  feather_mopra_hcop.py  joint_deconv_funcs.py  joint_deconvolution_and_feather_auto.py  make_region_list.py  mstrans_7m.py  reproject_mosaic_funcs.py  run_joint_deconv_tests.py  split_spws_12m.py  split_spws_7m.py
aces/joint_deconvolution_cont/: crop.py  feather.py  finalise.py  process_alma.py  process_mustang.py
aces/observation_planning/: spectral_shift_planning.py
aces/pipeline_scripts/: aggregate_high_tclean_commands.json  default_tclean_commands.json  generate_aggregate_high_commands.py  generate_spw33_commands.py  imaging_pipeline_rerun.py  merge_tclean_commands.py  override_tclean_commands.json  recover_tclean_commands.py  setup_package.py  spw_selections.json
aces/retrieval_scripts/: globus_cli_template.sh  globus_cli_template_totalpower.sh  make_humanreadable_links.py  mous_map.py  parse_weblog.py  retrieve_ancillary_data.py  retrieve_data.py  retrieve_weblogs.py  run_pipeline.py
aces/tests/: test_imports.py  test_json.py
aces/visualization/: ContinuumStatisticsFigures.py  alpha_zooms.py  brick_aces_comparison.py  compare_to_other.py  continuum_fig1a.py  cutout_vis.py  feather_continuum_figs.py  figure_configuration.py  lu_aces_compare.py  merge_mustang.py  mosaic_pngs.py  sgrb2_aces_comparison.py  toast_aces.py
analysis/: cube_stats_grid.py  imstats.py  spectral_extraction_Feb2022.py
hipergator_scripts/: delivery_status.py  ghapi_update.py  hack_plotms.py  job_runner.py  run_cube_stats_grid.sh  run_imagingpipeline_inplace.sh  run_pipeline_slurm_burst_mpi.sh  run_reimaging_script.sh  run_retrieval.sh  run_script_generator.sh  run_simple_script.sh
imaging/: header_12m.hdr  header_7m.hdr  imaging_parameters_7m.py  make_mosaic.py  mosaic_12m.py  mosaic_7m.py  mosaic_TP.py  run_imaging.py  write_tclean_scripts.py
joint_deconvolution/: joint_deconvolution_and_feather_auto.py  split_spws_12m.py  split_spws_7m.py
observation_planning/: spectral_shift_planning.py
pipeline_scripts/: default_tclean_commands.json  generate_spw33_commands.py  imaging_pipeline_rerun.py  merge_tclean_commands.py  override_tclean_commands.json  recover_tclean_commands.py
regions/: final_cmz02.reg  final_cmz05.reg  final_cmz06.reg  final_cmz07.reg  final_cmz09.reg  final_cmz10.reg  final_cmz11.reg  final_cmz13.reg  final_cmz16.reg  final_cmz17.reg  final_cmz21.reg  final_cmz25.reg  final_cmz28.reg  final_cmz29.reg  final_cmz30.reg  final_cmz35.reg  final_cmz37.reg  final_cmz40.reg  final_cmz41.reg  final_cmz42.reg  final_cmz44.reg  final_cmz45.reg
retrieval_scripts/: make_humanreadable_links.py  parse_weblog.py  retrieve_data.py  retrieve_weblogs.py  run_pipeline.py
(+111 files in other folders)
