[metadata]
name = aces
author = ACES team
author_email =
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/ACES-CMZ/reduction_ACES
description = ACES data reduction stuff
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = ACES-CMZ/reduction_ACES

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    astroquery
    scipy
    numpy
    matplotlib
    radio-beam
    spectral-cube
    regions
    reproject


[options.extras_require]
test =
    pytest-astropy
    astropy
    astroquery
    matplotlib
    scipy
    numpy
    ghapi
    radio-beam
    spectral-cube @ git+https://github.com/radio-astro-tools/spectral-cube.git@main
    regions
    reproject
    tqdm
docs =
    sphinx-astropy
all =
    astropy
    astroquery
    matplotlib
    scipy
    numpy
    ghapi
    radio-beam
    spectral-cube @ git+https://github.com/radio-astro-tools/spectral-cube.git@main
    regions
    reproject
    tqdm
    mpl_plot_templates @ git+https://github.com/keflavich/mpl_plot_templates.git@master

[options.package_data]
aces = data/*
aces.pipeline_scripts = *.json

[options.entry_points]
console_scripts =
    aces_giantcube_analysis = aces.analysis.giantcube_cuts:main
    aces_cube_stats_grid = aces.analysis.cube_stats_grid:main
    aces_cube_stats_grid_feathered = aces.analysis.cube_stats_grid_feathered:main
    aces_imstats = aces.analysis.imstats:main
    aces_statcont = aces.analysis.statcont_cubes:main
    aces_toast = aces.visualization.toast_aces:main
    aces_mosaic_12m = aces.imaging.mosaic_12m:main
    aces_mosaic_7m = aces.imaging.mosaic_7m:main
    aces_mosaic_TP = aces.imaging.mosaic_TP:main
    aces_reproject_to_celestial = aces.imaging.reproject_to_celestial:main
    aces_ghapi_update = aces.hipergator_scripts.ghapi_update:main
    aces_generate_spw33_commands = aces.pipeline_scripts.generate_spw33_commands:main
    aces_link_repipeline_weblogs = aces.hipergator_scripts.link_repipeline_weblogs:main
    aces_job_runner = aces.hipergator_scripts.job_runner:main
    aces_delivery_status = aces.hipergator_scripts.delivery_status:main
    aces_make_humanreadable_links = aces.retrieval_scripts.make_humanreadable_links:main
    aces_retrieve_data = aces.retrieval_scripts.retrieve_data:main
    aces_retrieve_weblogs = aces.retrieval_scripts.retrieve_weblogs:main
    aces_recover_tclean_commands = aces.pipeline_scripts.recover_tclean_commands:main
    aces_write_tclean_scripts = aces.imaging.write_tclean_scripts:main
    aces_uvhistograms = aces.analysis.uvhistograms:main
    aces_latex_table = aces.analysis.latex_table:main
    aces_correlation_plots = aces.analysis.correlation_plots:main
    aces_plot2corr = aces.analysis.plot_2D_corr_more:main

[tool:pytest]
testpaths = "aces"
astropy_header = true
text_file_format = rst

[coverage:run]
omit =
    aces/_astropy_init*
    aces/conftest.py
    aces/*setup_package*
    aces/tests/*
    aces/*/tests/*
    aces/extern/*
    aces/version*
    */aces/_astropy_init*
    */aces/conftest.py
    */aces/*setup_package*
    */aces/tests/*
    */aces/*/tests/*
    */aces/extern/*
    */aces/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
max-line-length = 250
ignore = W504,E265,F401,W292,E261,E262,E124,W503,E266
exclude = .ipynb_checkpoints,__pycache__,.tox,.git,ipython*.py
per-file-ignores =
    aces/joint_deconvolution/clean_HNCO_12m_7m.py:E221,E251,F821
    aces/analysis/selfcal/sgrb2_selfcal.py:F821
    aces/joint_deconvolution/make_region_list.py:E124,E221,E226
    aces/imaging/make_mosaic_12m.py:E226,F841
    aces/imaging/mosaic_12m.py:E226,F841,E128
    aces/imaging/parallel_tclean.py:E303,F541,E122
    aces/hipergator_scripts/job_runner.py:W503
    aces/imaging/TP-ACA-feather.py:W504,E265,F401,W292
    aces/imaging/12m-7mPlusTP-feather.py:W504,E265,F401,W292
    aces/pipeline_scripts/merge_tclean_commands.py:E124
    aces/hipergator_scripts/fix_multibeam_Aug1_2023.py:E501
    aces/analysis/giantcube_cuts.py:E501,E503
    aces/analysis/latex_table.py:E126
    aces/joint_deconvolution/feather_12m_7m_TP_cube_mosaic_modssmoothcasa.py:F841
    aces/joint_deconvolution/feather_12m_7m_TP_cube_mosaic_modsreprojectcasa.py:F841
    aces/analysis/check_cached_detections.py:E402,F541,W293
    aces/analysis/continuum_source_stacking.py:E402
    aces/analysis/crossmatch_catalog.py:E127,E221,E231,E241
    aces/analysis/debug_source_5293.py:F541,F821,W293
    aces/analysis/diagnose_missing_detections.py:E127,E302,E402,F541,W291,W293
    aces/analysis/line_detection_and_catalog_augmentation.py:E127,E128,E201,E202,E402,E722,F402,F841
    aces/analysis/line_ratio_analyses.py:E127,F541
    aces/analysis/measure_aces_flux_in_cmzoom_footprints.py:E221,E225,E231,E241,E302,E305,E702
    aces/analysis/plot_core_class_ppv.py:E128,E303,E402
    aces/analysis/selfcal/aces_raw_img.py:E121,E225,E231,E305,E401,E701,E702,E704
    aces/analysis/selfcal/check_aces_concat.py:E302,E305,E702
    aces/analysis/selfcal/check_modeldata.py:E225,E302,E305,E702
    aces/analysis/selfcal/compare_2013_concat.py:E302,E305,E702
    aces/analysis/selfcal/confirm_contsplit.py:E225,E228,E231,E305,E401,E701,E702,E704
    aces/analysis/selfcal/dump_spw.py:E302,E305,E702
    aces/analysis/selfcal/line_img_debug.py:E225,E231,E305,E401,E701,E702,E704
    aces/analysis/selfcal/newconcat_data_img.py:E225,E231,E305,E401,E701,E702,E704
    aces/analysis/selfcal/raweb_img.py:E225,E231,E305,E401,E701,E702,E704
    aces/analysis/selfcal/read_imgtest.py:E702
    aces/analysis/selfcal/sgrb2_2013standalone_img.py:E302,E305,E702
    aces/analysis/selfcal/sgrb2_diag.py:E302,E305,E402
    aces/analysis/selfcal/sgrb2_diag2.py:E225,E302,E305,E402,E702
    aces/analysis/selfcal/sgrb2_exportfits.py:F821
    aces/analysis/selfcal/sgrb2_imgtest.py:E302,E305,E702
    aces/analysis/selfcal/sgrb2_statwt_test.py:E302,E305,E702
    aces/analysis/sio_maser_refit.py:E221,E306,E702
    aces/analysis/spectral_extraction_everywhere.py:E128,F541
    aces/hipergator_scripts/cleanup_weight_directories.py:F541,W293
    aces/hipergator_scripts/reverse_orders.py:W291,W293
    aces/visualization/cutout_vis.py:E303
    aces/visualization/large_structure_moments.py:E127,E128,E303,E741,F541,F841,W291,W293
    aces/visualization/test_specific_sources.py:E302,E305,E402,F541,W291,W293